--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/TamaraRingas/Uniswap-V3-Trader/issues"
   },
-  "homepage": "https://github.com/TamaraRingas/Uniswap-V3-Trader#readme"
+  "homepage": "https://github.com/TamaraRingas/Uniswap-V3-Trader#readme",
+  "dependencies": {
+    "@uniswap/sdk-core": "^3.0.1",
+    "@uniswap/v3-core": "^1.0.1",
+    "@uniswap/v3-sdk": "^3.8.2",
+    "dotenv": "^16.0.1"
+  }
 }
